# oracle

./: .gitignore  README.md  docker-compose.yaml  main.py  package-lock.json  pyproject.toml
back_end/app/: cards.json  main.py
backend/telegram_bot/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
frontend/: Dockerfile  package.json
frontend/src/: App.css  App.js  index.css
frontend/src/Components/CardDescription/: CardDescription.jsx
frontend/src/Components/DailyLayout/: DailyLayout.jsx
frontend/src/Components/HomePage/: HomePage.jsx
frontend/tarot-server/: cards.js  package.json  server.js
ngrok/: Dockerfile  start_ngrok.sh
services/: docker-compose.yaml
services/llm/: Dockerfile  pyproject.toml
services/llm/src/: main.py
services/telegram_bot/: .dockerignore  Dockerfile  pyproject.toml
services/telegram_bot/src/: main.py
services/telegram_web_app/: .dockerignore  Dockerfile  nginx.conf
services/telegram_web_app/src/: index.html
src/Components/CardSelectionGrid/: CardSelectionGrid.jsx  CardSelectionGrid.module.css
src/Components/HomePage/: HomePage.module.css
src/Components/StoreMenu/: StoreMenu.jsx
tarot-server/: package-lock.json
