[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Handler for Telegram Bot on Python"
authors = ["Gusmanov Maksim <anysome17@gmail.com>, Mikhail Sidorenko <https://github.com/m-sidorenko>"]
license = "\\"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
