[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Alex-Kopylov  <Alexkopylov123@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langserve = {extras = ["server"], version = "^0.1.0"}
langchain = "^0.1.16"
langsmith = "^0.1.48"
langchain-cli = "^0.0.21"
fastapi = "^0.110.1"
pydantic = "<2.0.0"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
