[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Alex-Kopylov  <Alexkopylov123@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.3"
langserve = {extras = ["client"], version = "^0.2.2"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
